Fix FTP upload path: remove extra htdocs level
Files should go to /htdocs/hugo-contact/ not /htdocs/htdocs/hugo-contact/

--- a/.github/workflows/deploy-binary.yml
+++ b/.github/workflows/deploy-binary.yml
@@ -263,7 +263,7 @@ jobs:
           username: ${{ secrets.FTP_USER }}
           password: ${{ secrets.FTP_PASS }}
           local-dir: ./deployment/
-          server-dir: ./htdocs/hugo-contact/
+          server-dir: ./hugo-contact/
           protocol: ftps
           security: strict
           exclude: |
