--- a/.env.production.example
+++ b/.env.production.example
@@ -36,5 +36,13 @@ RATE_LIMIT=10
 # Optional: Email Subject Template
 # EMAIL_SUBJECT=New Contact Form Submission from {{.Name}}
 
+# Spam Logging and Reporting (optional)
+SPAM_LOG_ENABLED=false
+SPAM_LOG_DIR=/var/log/hugo-contact
+SPAM_LOG_MAX_SIZE_MB=10
+SPAM_LOG_RETENTION_DAYS=10
+SPAM_REPORT_ENABLED=false
+SPAM_REPORT_RECIPIENT=your@example.com
+
 # Optional: Debug Mode (never use in production)
 # DEBUG=false
