--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,11 @@ TOKEN_SECRET=your-32-character-secret-key-here
 
 # Port Configuration (optional)
 HOST_PORT=8080
+
+# Spam Logging and Reporting (optional)
+SPAM_LOG_ENABLED=false
+SPAM_LOG_DIR=/var/log/hugo-contact
+SPAM_LOG_MAX_SIZE_MB=10
+SPAM_LOG_RETENTION_DAYS=10
+SPAM_REPORT_ENABLED=false
+SPAM_REPORT_RECIPIENT=your@example.com
